# helios-server

./: .env  .gitignore  .gitmodules  .travis.yml  .wm  AUTO_REMINDERS.md  CHANGELOG.md  CLAUDE.md  CONFIG-NOTES.md  CONTRIBUTORS.txt  Changelog  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTALL-mac.md  INSTALL.md  Makefile  PROTOCOL.md  Pipfile  Procfile  RANDOMNESS_ANALYSIS.md  README  README.md  README.txt  TOKEN_LOGIN_PLAN.md  app.yaml  app.yaml.sample  autoretry.py  build-helios-main-site-js.txt  check-services.sh  compile-translations.sh  csv_reader.py  datetime_picker_demo.html  deploy-staging.sh  detect-empty-translations  detect-empty-translations.py  django-gae.py  django.wsgi  docker-compose.yml  email_debug.py  extract-passwords-for-email.py  (+32 more)
.envs/: .django  (+1 more)
helios-server/: INSTALL.md  Procfile  email_debug.py  migrate-to-3.5.txt  pyproject.toml  requirements.txt
helios-server/helios/: signals.py  utils.py
helios-server/helios/crypto/: utils.py
helios-server/helios/datatypes/: core.py
helios-server/helios/fixtures/: voter-file.csv
helios-server/helios/migrations/: 0002_castvote_cast_ip.py
helios-server/helios/templates/: _castconfirm_password.html  combine_decryptions.html  election_bboard.html  election_new.html  election_new_2.html  election_not_started.html  election_questions.html  election_view.html  socialbuttons.html  stats.html  trustee_home.html
helios-server/helios/workflows/: homomorphic.py
helios-server/helios_auth/auth_systems/: linkedin.py
helios-server/helios_auth/templates/: login_box.html
helios-server/heliosbooth/: vote.html
helios-server/heliosbooth/templates/: seal.html
helios-server/heliosverifier/: verify.html
helios-server/server_ui/: __init__.py
helios-server/server_ui/media/: foundation-tweaks.css
helios-server/server_ui/templates/: confirm.html  election_tallied.html
helios-server/templates/: 500.html
(+1430 files in other folders)
