[project]
name = "helios-server"
version = "4.0.0"
description = "Helios is an end-to-end verifiable voting system"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "django==5.2.9",
    "django-webtest>=1.9.11",
    "gunicorn==22.0.0",
    "dj-database-url==2.2.0",
    "psycopg2-binary==2.9.10",
    "celery==5.6.1",
    "django-picklefield==3.2",
    "django-anymail==11.0.1",
    "python-dateutil==2.9.0",
    "bleach==6.1.0",
    "django-csp==3.8",
    "validate-email==1.3",
    "pycryptodome==3.23.0",
    "python3-openid==3.2.0",
    "django-ses==4.1.0",
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "rollbar==1.3.0",
    "django-auth-ldap==4.8.0",
    "python-ldap==3.4.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
